# bioloid_b

./: README.md
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/lib/bioloid_joy/: bioloid_joy_node
devel/lib/bioloid_motion/: bioloid_motion_accel  bioloid_motion_moveto  bioloid_motion_new_walk  robot_motion_walk  robot_motion_walk_test  robot_motion_walk_test_new
devel/lib/pkgconfig/: bioloid_config.pc  bioloid_joy.pc  bioloid_motion.pc
devel/share/bioloid_config/cmake/: bioloid_configConfig.cmake
devel/share/bioloid_joy/cmake/: bioloid_joyConfig.cmake
devel/share/bioloid_motion/cmake/: bioloid_motionConfig.cmake
src/bioloid_config/: CMakeLists.txt
src/bioloid_config/config/: bioloid_controllers.yaml  bioloid_controllers_gazebo.yaml  bioloid_controllers_gazebo_multi.yaml
src/bioloid_config/launch/: bioloid_controllers.launch  bioloid_gazebo.launch  bioloid_launch.launch  bioloid_motion.launch  bioloid_moveto.launch  bioloid_pubs.launch
src/bioloid_config/launch/multibots/: bioloid_following.launch  bioloid_multicontrollers.launch  bioloid_multigazebo.launch  bioloid_multijoy.launch  bioloid_multilaunch.launch  bioloid_multimotion.launch  bioloid_multimoveto.launch  bioloid_multipubs.launch  bioloid_spawn_one_robot.launch
src/bioloid_config/world/: bioloid_house.world  books.world  id_0.world  id_1.world  id_2.world
src/bioloid_joy/: CMakeLists.txt
src/bioloid_joy/include/bioloid_joy/: joy.cpp  joy.hpp
src/bioloid_joy/include/libjoy/: libjoy.cpp  libjoy.hpp
src/bioloid_joy/launch/: bioloid_joy.launch
src/bioloid_joy/src/: bioloid_joy.py  libjoy.py  main.cpp
src/bioloid_motion/: CMakeLists.txt
src/bioloid_motion/config/: walk.yaml
src/bioloid_motion/include/bioloid/: bioloid_robot.cpp  bioloid_robot.hpp  bioloid_utils.cpp  bioloid_utils.hpp  bioloid_walk.cpp  bioloid_walk.hpp
src/bioloid_motion/include/bioloid_motion/: bioloid_motion.h  bioloid_motion_robot.h
src/bioloid_motion/include/moveto/: moveto.cpp  moveto.hpp
src/bioloid_motion/include/odom/: accel.cpp  accel.hpp  odom.cpp  odom.hpp
src/bioloid_motion/include/pid/: pid.cpp  pid.hpp
src/bioloid_motion/launch/: gazebo.launch
src/bioloid_motion/src/: accel_test.cpp  bioloid_motion_robot.cpp  bioloid_motion_walk.cpp  bioloid_motion_walk_test.cpp  bioloid_walk_test.cpp  gabriel.py  getTheNelso.py  moveto.cpp  moveto.py
src/bioloid_opencv/: CMakeLists.txt  package.xml
src/bioloid_opencv/include/aruco_identification/: aruco_identification.cpp  aruco_identification.hpp
src/bioloid_opencv/include/color_detect/: color_detect.cpp  color_detect.hpp
src/bioloid_opencv/include/image_converter/: README.md  image_converter.cpp  image_converter.hpp
src/bioloid_opencv/src/: goToWithId.cpp  main.cpp  marks.cpp
src/bioloid_typea_description/: gazebo.xacro  typea.urdf  typea.xacro
src/bioloid_typea_description/assets/cad/: camera.dae  teledyne.dae
src/bioloid_typea_description/launch/: rviz2.launch
